# ProgrammazioneDiSistema

./: README.md
Esercitazione1/: CMakeLists.txt  README.md  StringBuffer.h  main.cpp
Esercitazione2/: CMakeLists.txt  Directory.h  main.cpp
Esercitazione3/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  README.md  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
Esercitazione4/: CMakeLists.txt  Job.cpp  Job.h  JobScheduler.cpp  JobScheduler.h  README.md
Esercitazione5/: CMakeLists.txt  DirEntry.cpp  DirEntry.h  DirectoryPieChart.h  DiskStatusBar.cpp  DiskStatusBar.h  FileSystemModel.cpp  FileSystemModel.h  README.md  SearchBar.cpp  SearchBar.h  main.cpp
Malnati/2019/Esercitazione1/: StringBuffer.cpp
Malnati/2019/Esercitazione2/: Base.h  Directory.cpp  File.cpp  File.h  README.md
Malnati/2019/Esercitazione3/: README.md
Malnati/2019/Esercitazione4/: CMakeLists.txt  JobScheduler.h  README.md  main.cpp
Malnati/2019/Esercitazione5/: CMakeLists.txt  DirEntry.h  DirectoryPieChart.cpp  DiskStatusBar.h  FileSystemModel.cpp  FileSystemModel.h
Malnati/2020/Esercitazione1/: CMakeLists.txt  Message.cpp  Message.h  MessageStore.cpp  MessageStore.h  README.md  main.cpp
Malnati/2020/Esercitazione2/: Base.h  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  README.md  main.cpp
Malnati/2020/Esercitazione3/: CMakeLists.txt  MapperInputT.h  README.md  ReducerInputT.h  ResultT.h  functions.h  input_file.txt  main.cpp
Malnati/2020/Esercitazione4/: CMakeLists.txt  (+7 more)
Malnati/2020/Studies/: Buffer.cpp  Buffer.h  CMakeLists.txt  MyString.cpp  MyString.h  main.cpp
Malnati/2020/Studies/patternCRTP/: Amount.h  Constant42.h  Variable.h
Malnati/2020/Studies/smartPointer/: DoublyLinkedList.h  DoubnlyLinkedNode.h  smart_ptr.h
Malnati/2020/Studies/socket/: Socket.h  WinSockSingletonHelper.h
Malnati/Progetto 2018-2029 - Editor di testo cooperativo/: .gitignore
(+283 files in other folders)
