cmake_minimum_required(VERSION 3.13)
project(Esercitazione1)

set(CMAKE_CXX_STANDARD 17)

#set(SOURCE_FILE main.cpp StringBuffer.cpp)
#set(HEADER_FILE StringBuffer.h)


add_executable(Esercitazione1 main.cpp StringBuffer.cpp StringBuffer.h)
#add_executable(Esercitazione01 ${SOURCE_FILE} ${HEADER_FILE})
